--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,20 @@
+
+<ion-menu side="start" contentId="main">
+  <ion-content>
+    <ion-list>
+      <ion-item button [routerLink]="['/wallet']" routerDirection="forward">
+        <ion-icon color="primary" name="person-outline" slot="start"></ion-icon>
+        <ion-label>{{ authService.currentUser?.name }}</ion-label>
+      </ion-item>
+      <ion-item button (click)="logout()">
+        <ion-icon color="danger" name="log-out-outline" slot="start"></ion-icon>
+        <ion-label>Log Out</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
