--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,3 @@
-
 @import "~@ionic/angular/css/core.css";
 
 //DataTable
@@ -9,7 +8,6 @@
 // AutoComplete
 
 // @import "~@ng-select/ng-select/themes/default.theme.css";
-
 
 /* Basic CSS for apps built with Ionic */
 @import "~@ionic/angular/css/normalize.css";
@@ -23,7 +21,6 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
-
 
 @font-face {
   font-family: "SegoeUI";
@@ -132,9 +129,12 @@
   datatable-body-cell:last-child {
     display: flex !important;
     align-items: center !important;
+    .datatable-body-cell-label {
+      overflow: auto !important;
+    }
   }
 }
 
-#deleteBtn {
-  --ripple-color: #eb445a;
-}
+// #deleteBtn {
+//   --ripple-color: #eb445a;
+// }
