--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,16 @@
-
 <ion-menu side="start" contentId="main">
   <ion-content>
     <ion-list>
-      <ion-item button [routerLink]="['/wallet']" routerDirection="forward">
+      <ion-item>
         <ion-icon color="primary" name="person-outline" slot="start"></ion-icon>
         <ion-label>{{ authService.currentUser?.name }}</ion-label>
       </ion-item>
+
+      <ion-item button (click)="chooseTable()">
+        <ion-icon color="primary" slot="start" name="tv-outline"></ion-icon>
+        <ion-label>Change Table</ion-label>
+      </ion-item>
+
       <ion-item button (click)="logout()">
         <ion-icon color="danger" name="log-out-outline" slot="start"></ion-icon>
         <ion-label>Log Out</ion-label>
@@ -13,7 +18,6 @@
     </ion-list>
   </ion-content>
 </ion-menu>
-
 
 <ion-app>
   <ion-router-outlet id="main"></ion-router-outlet>
